Fix moving-square z-index

--- a/assets/mobile.css
+++ b/assets/mobile.css
@@ -11,4 +11,5 @@
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.5);
   -webkit-transform: translate3d(0,0,0);
+  z-index: 9;
 }
